[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnissimo"
version = "0.0.5"
description = "Scan web apps from your code."
readme = "README.md"
authors = [{ name = "Vulnissimo", email = "contact@vulnissimo.io" }]
license = { file = "LICENSE" }
dependencies = ["attrs", "httpx", "pydantic[email]", "rich", "typer"]
requires-python = ">=3.9"

[project.scripts]
vulnissimo = "vulnissimo.cli:app"
